test/expected/explain_f+_v.out
explain void f(int S::x)
               ^
16: error: parameter names can not be scoped
